yaml_files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sarit-deployment
##Defines the desired state of the Deployment, including the number of replicas, selector, and template for creating Pods.
spec:
  replicas: 6
  selector: ##pod selector (notice the lavel in line 10 matches line 14)
    matchLabels:
      app: web-sarit-second 
  template: ##Pod template
    metadata:
      labels:
        app: web-sarit-second
    spec: ##Pod specification
      containers:
      - name: sarit-second-container
        image: saritnovikg/my-second-app:1.0
        ports:
        - containerPort: 5000
