yaml_files/pod_crashloop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: faulty-pod
spec:
  containers:
  - name: faulty-container
    image: busybox
    command: ["sh", "-c", "exit 1"]
