yaml_files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sarit-service
spec:
  selector:
    app: web-sarit
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
      nodePort: 30010
  type: NodePort
